[package]
name = "flashlight"
version = "0.1.0"
edition = "2021"
authors = ["YourCodename <your@email.com>"]
description = "Tactical artifact scanner for identifying flash console activity on Windows"
license = "MIT"
keywords = ["forensics", "windows", "eventlog", "security", "prefetch"]
repository = "https://github.com/yourname/flashlight"

[dependencies]
windows = "0.52.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"