
[package]
name = "flashlight"
version = "0.1.0"
edition = "2021"
authors = ["YourCodename <your@email.com>"]
description = "Tactical artifact scanner for identifying flash console activity on Windows"
license = "MIT"
keywords = ["forensics", "windows", "eventlog", "security", "prefetch"]
repository = "https://github.com/x86kingfischer/flashlight"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_EventLog"
] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
widestring = "1.0"
